--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+    resolver 127.0.0.11 valid=30s;
+
     upstream frontend {
         server frontend:3000;
     }
@@ -11,8 +13,84 @@ http {
         server backend:3001;
     }
 
+    # Focus Engine - tracker.mas0n1x.online (unified)
     server {
         listen 80;
+        server_name tracker.mas0n1x.online focus-engine.mas0n1x.online;
+
+        # Landing Page (Hauptseite)
+        location = / {
+            proxy_pass http://host.docker.internal:8103;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Landing Page Assets
+        location ~ ^/(assets|logo\.svg|favicon\.svg|.*\.css|.*\.js)$ {
+            proxy_pass http://host.docker.internal:8103;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # App routes (login, register, dashboard, settings, etc.)
+        location ~ ^/(login|register|dashboard|settings|app) {
+            proxy_pass http://host.docker.internal:8102;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # API Backend
+        location /api/ {
+            rewrite ^/api/(.*) /$1 break;
+            proxy_pass http://host.docker.internal:3001;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Downloads folder
+        location /downloads/ {
+            proxy_pass http://host.docker.internal:8103;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Fallback to landing page for unknown routes
+        location / {
+            proxy_pass http://host.docker.internal:8103;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Default server (homelab dashboard)
+    server {
+        listen 80 default_server;
         server_name _;
 
         # Frontend
