--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:20-alpine
 
+# better-sqlite3 needs build tools on Alpine
+RUN apk add --no-cache python3 make g++
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -7,7 +10,7 @@ RUN npm install --production
 
 COPY src ./src
 
-# Create data directory for config
+# Create data directory for database
 RUN mkdir -p /app/data
 
 ENV NODE_ENV=production
