--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -24,7 +22,9 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - GLANCES_URL=http://host.docker.internal:61208
+      - DB_PATH=/app/data/dashboard.db
       - CONFIG_PATH=/app/data/config.json
+      - PORTFOLIO_API_URL=http://host.docker.internal:3000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - homelab-data:/app/data
