--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "homelab-dashboard-frontend",
-  "version": "1.0.0",
+  "name": "homelab-dashboard",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-node": "^2.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "svelte": "^4.2.8",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "chart.js": "^4.4.1",
-    "lucide-svelte": "^0.303.0"
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "recharts": "^2.12.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.400.0",
+    "zustand": "^4.5.0",
+    "@tanstack/react-query": "^5.50.0",
+    "clsx": "^2.1.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.4.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
+  }
 }
