--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine
 
-# better-sqlite3 needs build tools on Alpine
-RUN apk add --no-cache python3 make g++
+# better-sqlite3 needs build tools on Alpine, speedtest-cli and curl for speedtest
+RUN apk add --no-cache python3 make g++ py3-pip curl && pip3 install --break-system-packages speedtest-cli || true
 
 WORKDIR /app
 
