--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "lucide-react": "^0.400.0",
     "zustand": "^4.5.0",
     "@tanstack/react-query": "^5.50.0",
-    "clsx": "^2.1.0"
+    "clsx": "^2.1.0",
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
