--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -112,6 +112,8 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 300;
+            proxy_connect_timeout 60;
         }
 
         # WebSocket
