--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.16.0",
     "better-sqlite3": "^11.0.0"
   }
