--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,9 @@ events {
 http {
     resolver 127.0.0.11 valid=30s;
 
+    # Rate limiting for auth endpoints (brute-force protection)
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
+
     upstream frontend {
         server frontend:3000;
     }
@@ -93,6 +96,12 @@ http {
         listen 80 default_server;
         server_name _;
 
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
         # Frontend
         location / {
             proxy_pass http://frontend;
@@ -103,6 +112,16 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_cache_bypass $http_upgrade;
+        }
+
+        # Auth API (rate limited)
+        location /api/auth {
+            limit_req zone=auth burst=10 nodelay;
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         # Backend API
