--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -124,6 +124,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Mail inbound webhook (large payloads for attachments)
+        location /api/mail/inbound {
+            client_max_body_size 30m;
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 30;
+        }
+
         # Backend API
         location /api {
             proxy_pass http://backend;
