--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ JWT_SECRET=dein-geheimer-schluessel-hier
 # Erstelle einen Tunnel unter: https://one.dash.cloudflare.com -> Networks -> Tunnels
 # Setze als Public Hostname: http://nginx:80
 CLOUDFLARE_TUNNEL_TOKEN=dein-tunnel-token-hier
+
+# Cloudflare API Token
+# Für Worker-Deployment und Email-Routing Konfiguration
+# Erstelle einen Custom Token unter: https://dash.cloudflare.com/profile/api-tokens
+# Erforderliche Berechtigungen:
+#   - Konto: Workers-Skripts: Bearbeiten
+#   - Zone: Email Routing Rules: Bearbeiten
+#   - Zone: Zone Settings: Lesen
+CLOUDFLARE_API_TOKEN=dein-api-token-hier
